--- a/starter_code/templates/forms/edit_venue.html
+++ b/starter_code/templates/forms/edit_venue.html
@@ -38,7 +38,7 @@ block content %}
       <label for="genres">Genres</label>
       <small>Ctrl+Click to select multiple</small>
       {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by
-      commas', id=form.genres, autofocus = true) }}
+      commas', autofocus = true) }}
     </div>
     <div class="form-group">
       <label for="genres">Image Link</label>
